src/emit/emitter/snapshots/mu__emit__emitter__tests__print_field-2.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
v := { a: 0 }
print v["a"]
v["a"] = 1


# Func:
function "code":
  frame_size: 6
  length: 46
  const (length=2):
    0: "a"
    1: "v"
  code:
     0 | create_empty_dict 
     1 | store_reg r4
     3 | load_const [0]
     5 | store_reg r5
     7 | push_small_int value=0
    12 | insert_to_dict r5, r4
    15 | load_reg r4
    17 | store_global [1]
    19 | load_const [0]
    21 | store_reg r4
    23 | load_global [1]
    25 | load_index r4
    27 | print 
    28 | load_const [0]
    30 | store_reg r5
    32 | load_global [1]
    34 | store_reg r4
    36 | push_small_int value=1
    41 | store_index r5, r4
    44 | ret 
    45 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━━━━━━━━━━━━━━━━━●
r5 │                         ●━━━━━━━●
r6 │                                             ●━━━━━━━●
r7 │                                                         ●━━━━━━━━━━━━━━━━━━━●
r8 │                                                             ●━━━━━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  13  14  15  16  17  18  19  20  21  22  23  24  
