src/emit/emitter/snapshots/mu__emit__emitter__tests__print_literals-4.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
print [0, 1, 2]

# Func:
function "code":
  frame_size: 5
  length: 29
  const: <empty>
  code:
     0 | create_empty_list 
     1 | store_reg r4
     3 | push_small_int value=0
     8 | push_to_list r4
    10 | push_small_int value=1
    15 | push_to_list r4
    17 | push_small_int value=2
    22 | push_to_list r4
    24 | load_reg r4
    26 | print 
    27 | ret 
    28 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━━━━━━━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  13  14  
